--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,23 @@
 name: Python application test with Github Actions
-on: [push]
-jobs: 
+on: [push] # on every push event that makes a change
+jobs:
   build:
-   runs-on: ubuntu-latest
-   steps:
-   - uses: actions/checkout@v2
-   - name: Set up Python 3.11
-   - uses: actions/setup-python@v1
-     with:
-      python-version: 3.11
-   - name: Install dependencies 
-     run: |
-       make install 
-   - name: Lint with Pylint
-     run: |
-       make lint 
-      
+    runs-on: ubuntu-latest # runs on latest ubuntu contained
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8 
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8 # install python-version 3.8
+    - name: Install dependencies
+      run: |
+        make install # run a make install to install dependencies
+    - name: Lint with Pylint 
+      run: |
+        make lint # make sure syntax of project is correct
+    - name: Test with Pytest 
+      run: |
+        make test # run tests
+    - name: Format code with Python black 
+      run: |
+        make format # format the code.
